--- a/Recife-meuspontosturisticospreferidos.html
+++ b/Recife-meuspontosturisticospreferidos.html
@@ -25,7 +25,7 @@
         <main>
             <h1>Pontos Turísticos em Recife </h1>
             <section id="section-01">            
-                <h2>Lugares que mais gosto de frequentar na minha cidade natal</h2>
+                <h2 id="subtitulo">Lugares que mais gosto de frequentar na minha cidade natal</h2>
                 <br/>
                 <p>Porta de entrada do Nordeste brasileiro, Recife além de belas paisagens - com pontes e rios cortando toda a cidade, atrai milhares de turistas todos os anos. Rica em manifestações culturais e folclóricas, suas raízes estão sempre traduzidas em sua essência artística e preservadas como importante patrimônio. Confira a lista dos meus lugares preferidos da cidade da Recife: </p>
                 <br/>
@@ -53,7 +53,7 @@
             </section>
 
         <aside>
-            <h2>Veja Também:</h2>
+            <h2 id="asideTitulo">Você também pode se interessar:</h2>
             <br/>
             <div>
                 <a href="pontoturistico-recife.html">
